fix jdk11 String method: .isBlank(). Replaced with .trim().isEmpty()